detrace/analysis/tokens/1.output
Terminals unused in grammar

    XOR
    GOTO
    SWITCH
    CASE
    DEFAULT


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration
    5                     | PREPROCESSOR

    6 declaration_list: declaration
    7                 | declaration_list declaration

    8 block_item: declaration
    9           | statement

   10 type_qualifier_list: type_qualifier
   11                    | type_qualifier_list type_qualifier

   12 compound_statement: LBRACE RBRACE
   13                   | LBRACE non_empty_block_item_list RBRACE

   14 non_empty_block_item_list: block_item
   15                          | non_empty_block_item_list block_item

   16 function_definition: declaration_specifiers declarator declaration_list compound_statement
   17                    | declaration_specifiers declarator compound_statement

   18 declaration: declaration_specifiers SEMICOLON
   19            | declaration_specifiers init_declarator_list SEMICOLON

   20 init_declarator_list: init_declarator
   21                     | init_declarator_list COMMA init_declarator

   22 init_declarator: declarator ASSIGN initializer
   23                | declarator

   24 declaration_specifiers: storage_class_specifier declaration_specifiers
   25                       | storage_class_specifier
   26                       | type_specifier declaration_specifiers
   27                       | type_specifier
   28                       | type_qualifier declaration_specifiers
   29                       | type_qualifier
   30                       | function_specifier declaration_specifiers
   31                       | function_specifier
   32                       | alignment_specifier declaration_specifiers
   33                       | alignment_specifier

   34 storage_class_specifier: TYPEDEF
   35                        | EXTERN
   36                        | STATIC
   37                        | AUTO
   38                        | REGISTER

   39 type_specifier: VOID
   40               | CHAR
   41               | SHORT
   42               | INT
   43               | LONG
   44               | FLOAT
   45               | DOUBLE
   46               | SIGNED
   47               | UNSIGNED
   48               | BOOL
   49               | struct_or_union_specifier
   50               | enum_specifier
   51               | TYPEDEF_NAME

   52 type_qualifier: CONST
   53               | RESTRICT
   54               | VOLATILE

   55 function_specifier: INLINE
   56                   | NORETURN

   57 alignment_specifier: ALIGNAS LPAREN type_name RPAREN

   58 declarator: pointer direct_declarator
   59           | direct_declarator

   60 pointer: MULTIPLY
   61        | MULTIPLY type_qualifier_list
   62        | MULTIPLY pointer
   63        | MULTIPLY type_qualifier_list pointer

   64 direct_declarator: IDENTIFIER
   65                  | LPAREN declarator RPAREN
   66                  | direct_declarator LSQBRACKET assignment_expression RSQBRACKET
   67                  | direct_declarator LPAREN RPAREN
   68                  | direct_declarator LPAREN argument_expression_list RPAREN
   69                  | direct_declarator LPAREN parameter_type_list RPAREN

   70 struct_or_union_specifier: STRUCT LBRACE struct_declaration_list RBRACE
   71                          | STRUCT IDENTIFIER LBRACE struct_declaration_list RBRACE
   72                          | STRUCT IDENTIFIER
   73                          | UNION LBRACE struct_declaration_list RBRACE
   74                          | UNION IDENTIFIER LBRACE struct_declaration_list RBRACE
   75                          | UNION IDENTIFIER

   76 struct_declaration_list: struct_declaration
   77                        | struct_declaration_list struct_declaration

   78 struct_declaration: specifier_qualifier_list SEMICOLON
   79                   | specifier_qualifier_list struct_declarator_list SEMICOLON

   80 specifier_qualifier_list: type_specifier
   81                         | type_specifier specifier_qualifier_list
   82                         | type_qualifier
   83                         | type_qualifier specifier_qualifier_list

   84 struct_declarator_list: struct_declarator
   85                       | struct_declarator_list COMMA struct_declarator

   86 struct_declarator: declarator
   87                  | declarator COLON constant_expression
   88                  | COLON constant_expression

   89 enum_specifier: ENUM LBRACE enumerator_list RBRACE
   90               | ENUM IDENTIFIER LBRACE enumerator_list RBRACE
   91               | ENUM IDENTIFIER

   92 enumerator_list: enumeration_constant
   93                | enumerator_list COMMA enumeration_constant

   94 enumeration_constant: IDENTIFIER

   95 type_name: specifier_qualifier_list
   96          | specifier_qualifier_list abstract_declarator

   97 abstract_declarator: pointer
   98                    | pointer direct_abstract_declarator
   99                    | direct_abstract_declarator

  100 direct_abstract_declarator: LPAREN abstract_declarator RPAREN
  101                           | LSQBRACKET RSQBRACKET
  102                           | LSQBRACKET type_qualifier_list assignment_expression RSQBRACKET
  103                           | direct_abstract_declarator LSQBRACKET assignment_expression RSQBRACKET
  104                           | LPAREN parameter_type_list RPAREN
  105                           | direct_abstract_declarator LPAREN parameter_type_list RPAREN

  106 parameter_type_list: parameter_list
  107                    | parameter_list COMMA ELLIPSIS

  108 parameter_list: parameter_declaration
  109               | parameter_list COMMA parameter_declaration

  110 parameter_declaration: declaration_specifiers declarator
  111                      | declaration_specifiers abstract_declarator
  112                      | declaration_specifiers

  113 initializer: assignment_expression
  114            | LBRACE initializer_list RBRACE
  115            | LBRACE initializer_list COMMA RBRACE

  116 initializer_list: initializer
  117                 | initializer_list COMMA initializer

  118 statement: expression_statement
  119          | RETURN expression SEMICOLON
  120          | iteration_statement
  121          | conditional_statement
  122          | compound_statement
  123          | BREAK SEMICOLON
  124          | CONTINUE SEMICOLON

  125 iteration_statement: DO statement WHILE LPAREN expression RPAREN SEMICOLON
  126                    | WHILE LPAREN expression RPAREN statement
  127                    | FOR LPAREN expression_statement expression_statement expression_statement RPAREN statement

  128 conditional_statement: IF LPAREN expression RPAREN statement
  129                      | IF LPAREN expression RPAREN statement ELSE statement

  130 expression_statement: SEMICOLON
  131                     | expression SEMICOLON

  132 primary_expression: IDENTIFIER
  133                   | NUMBER
  134                   | CHAR_LITERAL
  135                   | STRING_LITERAL
  136                   | LPAREN expression RPAREN

  137 postfix_expression: primary_expression
  138                   | postfix_expression LSQBRACKET expression RSQBRACKET
  139                   | postfix_expression LPAREN RPAREN
  140                   | postfix_expression LPAREN argument_expression_list RPAREN
  141                   | postfix_expression DOT IDENTIFIER
  142                   | postfix_expression ARROW IDENTIFIER
  143                   | postfix_expression INCREMENT
  144                   | postfix_expression DECREMENT

  145 argument_expression_list: assignment_expression
  146                         | argument_expression_list COMMA assignment_expression

  147 unary_expression: postfix_expression
  148                 | INCREMENT unary_expression
  149                 | DECREMENT unary_expression
  150                 | unary_operator cast_expression
  151                 | SIZEOF unary_expression
  152                 | SIZEOF LPAREN type_name RPAREN

  153 unary_operator: BIT_AND
  154               | MULTIPLY
  155               | PLUS
  156               | MINUS
  157               | BIT_NOT
  158               | NOT

  159 cast_expression: unary_expression
  160                | LPAREN type_name RPAREN cast_expression

  161 multiplicative_expression: cast_expression
  162                          | multiplicative_expression MULTIPLY cast_expression
  163                          | multiplicative_expression DIVIDE cast_expression
  164                          | multiplicative_expression MODULO cast_expression

  165 additive_expression: multiplicative_expression
  166                    | additive_expression PLUS multiplicative_expression
  167                    | additive_expression MINUS multiplicative_expression

  168 shift_expression: additive_expression
  169                 | shift_expression SHIFT_LEFT additive_expression
  170                 | shift_expression SHIFT_RIGHT additive_expression

  171 relational_expression: shift_expression
  172                      | relational_expression LESS shift_expression
  173                      | relational_expression GREATER shift_expression
  174                      | relational_expression LESS_EQUAL shift_expression
  175                      | relational_expression GREATER_EQUAL shift_expression

  176 equality_expression: relational_expression
  177                    | equality_expression EQUAL relational_expression
  178                    | equality_expression NOT_EQUAL relational_expression

  179 and_expression: equality_expression
  180               | and_expression BIT_AND equality_expression

  181 exclusive_or_expression: and_expression
  182                        | exclusive_or_expression BIT_XOR and_expression

  183 inclusive_or_expression: exclusive_or_expression
  184                        | inclusive_or_expression BIT_OR exclusive_or_expression

  185 logical_and_expression: inclusive_or_expression
  186                       | logical_and_expression AND inclusive_or_expression

  187 logical_or_expression: logical_and_expression
  188                      | logical_or_expression OR logical_and_expression

  189 conditional_expression: logical_or_expression
  190                       | logical_or_expression QUESTION expression COLON conditional_expression

  191 assignment_expression: conditional_expression
  192                      | unary_expression assignment_operator assignment_expression

  193 assignment_operator: ASSIGN
  194                    | PLUS_ASSIGN
  195                    | MINUS_ASSIGN
  196                    | MUL_ASSIGN
  197                    | DIV_ASSIGN
  198                    | MOD_ASSIGN
  199                    | SHIFT_LEFT_ASSIGN
  200                    | SHIFT_RIGHT_ASSIGN
  201                    | BIT_AND_ASSIGN
  202                    | BIT_XOR_ASSIGN
  203                    | BIT_OR_ASSIGN

  204 expression: assignment_expression
  205           | expression COMMA assignment_expression

  206 constant_expression: conditional_expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PREPROCESSOR (258) 5
    IDENTIFIER (259) 64 71 72 74 75 90 91 94 132 141 142
    NUMBER (260) 133
    CHAR_LITERAL (261) 134
    STRING_LITERAL (262) 135
    TYPEDEF_NAME (263) 51
    TYPEDEF (264) 34
    EXTERN (265) 35
    STATIC (266) 36
    AUTO (267) 37
    REGISTER (268) 38
    VOID (269) 39
    CHAR (270) 40
    SHORT (271) 41
    INT (272) 42
    LONG (273) 43
    FLOAT (274) 44
    DOUBLE (275) 45
    SIGNED (276) 46
    UNSIGNED (277) 47
    BOOL (278) 48
    STRUCT (279) 70 71 72
    UNION (280) 73 74 75
    ENUM (281) 89 90 91
    CONST (282) 52
    RESTRICT (283) 53
    VOLATILE (284) 54
    INLINE (285) 55
    NORETURN (286) 56
    ALIGNAS (287) 57
    SIZEOF (288) 151 152
    ELLIPSIS (289) 107
    LPAREN (290) 57 65 67 68 69 100 104 105 125 126 127 128 129 136 139 140 152 160
    RPAREN (291) 57 65 67 68 69 100 104 105 125 126 127 128 129 136 139 140 152 160
    LSQBRACKET (292) 66 101 102 103 138
    RSQBRACKET (293) 66 101 102 103 138
    LBRACE (294) 12 13 70 71 73 74 89 90 114 115
    RBRACE (295) 12 13 70 71 73 74 89 90 114 115
    SEMICOLON (296) 18 19 78 79 119 123 124 125 130 131
    COMMA (297) 21 85 93 107 109 115 117 146 205
    COLON (298) 87 88 190
    DOT (299) 141
    ARROW (300) 142
    QUESTION (301) 190
    ASSIGN (302) 22 193
    PLUS_ASSIGN (303) 194
    MINUS_ASSIGN (304) 195
    MUL_ASSIGN (305) 196
    DIV_ASSIGN (306) 197
    MOD_ASSIGN (307) 198
    SHIFT_LEFT_ASSIGN (308) 199
    SHIFT_RIGHT_ASSIGN (309) 200
    BIT_AND_ASSIGN (310) 201
    BIT_XOR_ASSIGN (311) 202
    BIT_OR_ASSIGN (312) 203
    OR (313) 188
    AND (314) 186
    BIT_OR (315) 184
    BIT_AND (316) 153 180
    BIT_XOR (317) 182
    XOR (318)
    NOT (319) 158
    BIT_NOT (320) 157
    EQUAL (321) 177
    NOT_EQUAL (322) 178
    LESS (323) 172
    GREATER (324) 173
    LESS_EQUAL (325) 174
    GREATER_EQUAL (326) 175
    SHIFT_LEFT (327) 169
    SHIFT_RIGHT (328) 170
    PLUS (329) 155 166
    MINUS (330) 156 167
    MULTIPLY (331) 60 61 62 63 154 162
    DIVIDE (332) 163
    MODULO (333) 164
    IF (334) 128 129
    ELSE (335) 129
    WHILE (336) 125 126
    GOTO (337)
    BREAK (338) 123
    CONTINUE (339) 124
    FOR (340) 127
    SWITCH (341)
    CASE (342)
    DEFAULT (343)
    DO (344) 125
    INCREMENT (345) 143 148
    DECREMENT (346) 144 149
    RETURN (347) 119
    LOWER_THAN_ELSE (348)


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    translation_unit (95)
        on left: 1 2
        on right: 0 2
    external_declaration (96)
        on left: 3 4 5
        on right: 1 2
    declaration_list (97)
        on left: 6 7
        on right: 7 16
    block_item (98)
        on left: 8 9
        on right: 14 15
    type_qualifier_list (99)
        on left: 10 11
        on right: 11 61 63 102
    compound_statement (100)
        on left: 12 13
        on right: 16 17 122
    non_empty_block_item_list (101)
        on left: 14 15
        on right: 13 15
    function_definition (102)
        on left: 16 17
        on right: 3
    declaration (103)
        on left: 18 19
        on right: 4 6 7 8
    init_declarator_list (104)
        on left: 20 21
        on right: 19 21
    init_declarator (105)
        on left: 22 23
        on right: 20 21
    declaration_specifiers (106)
        on left: 24 25 26 27 28 29 30 31 32 33
        on right: 16 17 18 19 24 26 28 30 32 110 111 112
    storage_class_specifier (107)
        on left: 34 35 36 37 38
        on right: 24 25
    type_specifier (108)
        on left: 39 40 41 42 43 44 45 46 47 48 49 50 51
        on right: 26 27 80 81
    type_qualifier (109)
        on left: 52 53 54
        on right: 10 11 28 29 82 83
    function_specifier (110)
        on left: 55 56
        on right: 30 31
    alignment_specifier (111)
        on left: 57
        on right: 32 33
    declarator (112)
        on left: 58 59
        on right: 16 17 22 23 65 86 87 110
    pointer (113)
        on left: 60 61 62 63
        on right: 58 62 63 97 98
    direct_declarator (114)
        on left: 64 65 66 67 68 69
        on right: 58 59 66 67 68 69
    struct_or_union_specifier (115)
        on left: 70 71 72 73 74 75
        on right: 49
    struct_declaration_list (116)
        on left: 76 77
        on right: 70 71 73 74 77
    struct_declaration (117)
        on left: 78 79
        on right: 76 77
    specifier_qualifier_list (118)
        on left: 80 81 82 83
        on right: 78 79 81 83 95 96
    struct_declarator_list (119)
        on left: 84 85
        on right: 79 85
    struct_declarator (120)
        on left: 86 87 88
        on right: 84 85
    enum_specifier (121)
        on left: 89 90 91
        on right: 50
    enumerator_list (122)
        on left: 92 93
        on right: 89 90 93
    enumeration_constant (123)
        on left: 94
        on right: 92 93
    type_name (124)
        on left: 95 96
        on right: 57 152 160
    abstract_declarator (125)
        on left: 97 98 99
        on right: 96 100 111
    direct_abstract_declarator (126)
        on left: 100 101 102 103 104 105
        on right: 98 99 103 105
    parameter_type_list (127)
        on left: 106 107
        on right: 69 104 105
    parameter_list (128)
        on left: 108 109
        on right: 106 107 109
    parameter_declaration (129)
        on left: 110 111 112
        on right: 108 109
    initializer (130)
        on left: 113 114 115
        on right: 22 116 117
    initializer_list (131)
        on left: 116 117
        on right: 114 115 117
    statement (132)
        on left: 118 119 120 121 122 123 124
        on right: 9 125 126 127 128 129
    iteration_statement (133)
        on left: 125 126 127
        on right: 120
    conditional_statement (134)
        on left: 128 129
        on right: 121
    expression_statement (135)
        on left: 130 131
        on right: 118 127
    primary_expression (136)
        on left: 132 133 134 135 136
        on right: 137
    postfix_expression (137)
        on left: 137 138 139 140 141 142 143 144
        on right: 138 139 140 141 142 143 144 147
    argument_expression_list (138)
        on left: 145 146
        on right: 68 140 146
    unary_expression (139)
        on left: 147 148 149 150 151 152
        on right: 148 149 151 159 192
    unary_operator (140)
        on left: 153 154 155 156 157 158
        on right: 150
    cast_expression (141)
        on left: 159 160
        on right: 150 160 161 162 163 164
    multiplicative_expression (142)
        on left: 161 162 163 164
        on right: 162 163 164 165 166 167
    additive_expression (143)
        on left: 165 166 167
        on right: 166 167 168 169 170
    shift_expression (144)
        on left: 168 169 170
        on right: 169 170 171 172 173 174 175
    relational_expression (145)
        on left: 171 172 173 174 175
        on right: 172 173 174 175 176 177 178
    equality_expression (146)
        on left: 176 177 178
        on right: 177 178 179 180
    and_expression (147)
        on left: 179 180
        on right: 180 181 182
    exclusive_or_expression (148)
        on left: 181 182
        on right: 182 183 184
    inclusive_or_expression (149)
        on left: 183 184
        on right: 184 185 186
    logical_and_expression (150)
        on left: 185 186
        on right: 186 187 188
    logical_or_expression (151)
        on left: 187 188
        on right: 188 189 190
    conditional_expression (152)
        on left: 189 190
        on right: 190 191 206
    assignment_expression (153)
        on left: 191 192
        on right: 66 102 103 113 145 146 192 204 205
    assignment_operator (154)
        on left: 193 194 195 196 197 198 199 200 201 202 203
        on right: 192
    expression (155)
        on left: 204 205
        on right: 119 125 126 128 129 131 136 138 190 205
    constant_expression (156)
        on left: 206
        on right: 87 88


State 0

    0 $accept: • translation_unit $end

    PREPROCESSOR  shift, and go to state 1
    TYPEDEF_NAME  shift, and go to state 2
    TYPEDEF       shift, and go to state 3
    EXTERN        shift, and go to state 4
    STATIC        shift, and go to state 5
    AUTO          shift, and go to state 6
    REGISTER      shift, and go to state 7
    VOID          shift, and go to state 8
    CHAR          shift, and go to state 9
    SHORT         shift, and go to state 10
    INT           shift, and go to state 11
    LONG          shift, and go to state 12
    FLOAT         shift, and go to state 13
    DOUBLE        shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    BOOL          shift, and go to state 17
    STRUCT        shift, and go to state 18
    UNION         shift, and go to state 19
    ENUM          shift, and go to state 20
    CONST         shift, and go to state 21
    RESTRICT      shift, and go to state 22
    VOLATILE      shift, and go to state 23
    INLINE        shift, and go to state 24
    NORETURN      shift, and go to state 25
    ALIGNAS       shift, and go to state 26

    translation_unit           go to state 27
    external_declaration       go to state 28
    function_definition        go to state 29
    declaration                go to state 30
    declaration_specifiers     go to state 31
    storage_class_specifier    go to state 32
    type_specifier             go to state 33
    type_qualifier             go to state 34
    function_specifier         go to state 35
    alignment_specifier        go to state 36
    struct_or_union_specifier  go to state 37
    enum_specifier             go to state 38


State 1

    5 external_declaration: PREPROCESSOR •

    $default  reduce using rule 5 (external_declaration)


State 2

   51 type_specifier: TYPEDEF_NAME •

    $default  reduce using rule 51 (type_specifier)


State 3

   34 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 34 (storage_class_specifier)


State 4

   35 storage_class_specifier: EXTERN •

    $default  reduce using rule 35 (storage_class_specifier)


State 5

   36 storage_class_specifier: STATIC •

    $default  reduce using rule 36 (storage_class_specifier)


State 6

   37 storage_class_specifier: AUTO •

    $default  reduce using rule 37 (storage_class_specifier)


State 7

   38 storage_class_specifier: REGISTER •

    $default  reduce using rule 38 (storage_class_specifier)


State 8

   39 type_specifier: VOID •

    $default  reduce using rule 39 (type_specifier)


State 9

   40 type_specifier: CHAR •

    $default  reduce using rule 40 (type_specifier)


State 10

   41 type_specifier: SHORT •

    $default  reduce using rule 41 (type_specifier)


State 11

   42 type_specifier: INT •

    $default  reduce using rule 42 (type_specifier)


State 12

   43 type_specifier: LONG •

    $default  reduce using rule 43 (type_specifier)


State 13

   44 type_specifier: FLOAT •

    $default  reduce using rule 44 (type_specifier)


State 14

   45 type_specifier: DOUBLE •

    $default  reduce using rule 45 (type_specifier)


State 15

   46 type_specifier: SIGNED •

    $default  reduce using rule 46 (type_specifier)


State 16

   47 type_specifier: UNSIGNED •

    $default  reduce using rule 47 (type_specifier)


State 17

   48 type_specifier: BOOL •

    $default  reduce using rule 48 (type_specifier)


State 18

   70 struct_or_union_specifier: STRUCT • LBRACE struct_declaration_list RBRACE
   71                          | STRUCT • IDENTIFIER LBRACE struct_declaration_list RBRACE
   72                          | STRUCT • IDENTIFIER

    IDENTIFIER  shift, and go to state 39
    LBRACE      shift, and go to state 40


State 19

   73 struct_or_union_specifier: UNION • LBRACE struct_declaration_list RBRACE
   74                          | UNION • IDENTIFIER LBRACE struct_declaration_list RBRACE
   75                          | UNION • IDENTIFIER

    IDENTIFIER  shift, and go to state 41
    LBRACE      shift, and go to state 42


State 20

   89 enum_specifier: ENUM • LBRACE enumerator_list RBRACE
   90               | ENUM • IDENTIFIER LBRACE enumerator_list RBRACE
   91               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 43
    LBRACE      shift, and go to state 44


State 21

   52 type_qualifier: CONST •

    $default  reduce using rule 52 (type_qualifier)


State 22

   53 type_qualifier: RESTRICT •

    $default  reduce using rule 53 (type_qualifier)


State 23

   54 type_qualifier: VOLATILE •

    $default  reduce using rule 54 (type_qualifier)


State 24

   55 function_specifier: INLINE •

    $default  reduce using rule 55 (function_specifier)


State 25

   56 function_specifier: NORETURN •

    $default  reduce using rule 56 (function_specifier)


State 26

   57 alignment_specifier: ALIGNAS • LPAREN type_name RPAREN

    LPAREN  shift, and go to state 45


State 27

    0 $accept: translation_unit • $end
    2 translation_unit: translation_unit • external_declaration

    $end          shift, and go to state 46
    PREPROCESSOR  shift, and go to state 1
    TYPEDEF_NAME  shift, and go to state 2
    TYPEDEF       shift, and go to state 3
    EXTERN        shift, and go to state 4
    STATIC        shift, and go to state 5
    AUTO          shift, and go to state 6
    REGISTER      shift, and go to state 7
    VOID          shift, and go to state 8
    CHAR          shift, and go to state 9
    SHORT         shift, and go to state 10
    INT           shift, and go to state 11
    LONG          shift, and go to state 12
    FLOAT         shift, and go to state 13
    DOUBLE        shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    BOOL          shift, and go to state 17
    STRUCT        shift, and go to state 18
    UNION         shift, and go to state 19
    ENUM          shift, and go to state 20
    CONST         shift, and go to state 21
    RESTRICT      shift, and go to state 22
    VOLATILE      shift, and go to state 23
    INLINE        shift, and go to state 24
    NORETURN      shift, and go to state 25
    ALIGNAS       shift, and go to state 26

    external_declaration       go to state 47
    function_definition        go to state 29
    declaration                go to state 30
    declaration_specifiers     go to state 31
    storage_class_specifier    go to state 32
    type_specifier             go to state 33
    type_qualifier             go to state 34
    function_specifier         go to state 35
    alignment_specifier        go to state 36
    struct_or_union_specifier  go to state 37
    enum_specifier             go to state 38


State 28

    1 translation_unit: external_declaration •

    $default  reduce using rule 1 (translation_unit)


State 29

    3 external_declaration: function_definition •

    $default  reduce using rule 3 (external_declaration)


State 30

    4 external_declaration: declaration •

    $default  reduce using rule 4 (external_declaration)


State 31

   16 function_definition: declaration_specifiers • declarator declaration_list compound_statement
   17                    | declaration_specifiers • declarator compound_statement
   18 declaration: declaration_specifiers • SEMICOLON
   19            | declaration_specifiers • init_declarator_list SEMICOLON

    IDENTIFIER  shift, and go to state 48
    LPAREN      shift, and go to state 49
    SEMICOLON   shift, and go to state 50
    MULTIPLY    shift, and go to state 51

    init_declarator_list  go to state 52
    init_declarator       go to state 53
    declarator            go to state 54
    pointer               go to state 55
    direct_declarator     go to state 56


State 32

   24 declaration_specifiers: storage_class_specifier • declaration_specifiers
   25                       | storage_class_specifier •

    TYPEDEF_NAME  shift, and go to state 2
    TYPEDEF       shift, and go to state 3
    EXTERN        shift, and go to state 4
    STATIC        shift, and go to state 5
    AUTO          shift, and go to state 6
    REGISTER      shift, and go to state 7
    VOID          shift, and go to state 8
    CHAR          shift, and go to state 9
    SHORT         shift, and go to state 10
    INT           shift, and go to state 11
    LONG          shift, and go to state 12
    FLOAT         shift, and go to state 13
    DOUBLE        shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    BOOL          shift, and go to state 17
    STRUCT        shift, and go to state 18
    UNION         shift, and go to state 19
    ENUM          shift, and go to state 20
    CONST         shift, and go to state 21
    RESTRICT      shift, and go to state 22
    VOLATILE      shift, and go to state 23
    INLINE        shift, and go to state 24
    NORETURN      shift, and go to state 25
    ALIGNAS       shift, and go to state 26

    $default  reduce using rule 25 (declaration_specifiers)

    declaration_specifiers     go to state 57
    storage_class_specifier    go to state 32
    type_specifier             go to state 33
    type_qualifier             go to state 34
    function_specifier         go to state 35
    alignment_specifier        go to state 36
    struct_or_union_specifier  go to state 37
    enum_specifier             go to state 38


State 33

   26 declaration_specifiers: type_specifier • declaration_specifiers
   27                       | type_specifier •

    TYPEDEF_NAME  shift, and go to state 2
    TYPEDEF       shift, and go to state 3
    EXTERN        shift, and go to state 4
    STATIC        shift, and go to state 5
    AUTO          shift, and go to state 6
    REGISTER      shift, and go to state 7
    VOID          shift, and go to state 8
    CHAR          shift, and go to state 9
    SHORT         shift, and go to state 10
    INT           shift, and go to state 11
    LONG          shift, and go to state 12
    FLOAT         shift, and go to state 13
    DOUBLE        shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    BOOL          shift, and go to state 17
    STRUCT        shift, and go to state 18
    UNION         shift, and go to state 19
    ENUM          shift, and go to state 20
    CONST         shift, and go to state 21
    RESTRICT      shift, and go to state 22
    VOLATILE      shift, and go to state 23
    INLINE        shift, and go to state 24
    NORETURN      shift, and go to state 25
    ALIGNAS       shift, and go to state 26

    $default  reduce using rule 27 (declaration_specifiers)

    declaration_specifiers     go to state 58
    storage_class_specifier    go to state 32
    type_specifier             go to state 33
    type_qualifier             go to state 34
    function_specifier         go to state 35
    alignment_specifier        go to state 36
    struct_or_union_specifier  go to state 37
    enum_specifier             go to state 38


State 34

   28 declaration_specifiers: type_qualifier • declaration_specifiers
   29                       | type_qualifier •

    TYPEDEF_NAME  shift, and go to state 2
    TYPEDEF       shift, and go to state 3
    EXTERN        shift, and go to state 4
    STATIC        shift, and go to state 5
    AUTO          shift, and go to state 6
    REGISTER      shift, and go to state 7
    VOID          shift, and go to state 8
    CHAR          shift, and go to state 9
    SHORT         shift, and go to state 10
    INT           shift, and go to state 11
    LONG          shift, and go to state 12
    FLOAT         shift, and go to state 13
    DOUBLE        shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    BOOL          shift, and go to state 17
    STRUCT        shift, and go to state 18
    UNION         shift, and go to state 19
    ENUM          shift, and go to state 20
    CONST         shift, and go to state 21
    RESTRICT      shift, and go to state 22
    VOLATILE      shift, and go to state 23
    INLINE        shift, and go to state 24
    NORETURN      shift, and go to state 25
    ALIGNAS       shift, and go to state 26

    $default  reduce using rule 29 (declaration_specifiers)

    declaration_specifiers     go to state 59
    storage_class_specifier    go to state 32
    type_specifier             go to state 33
    type_qualifier             go to state 34
    function_specifier         go to state 35
    alignment_specifier        go to state 36
    struct_or_union_specifier  go to state 37
    enum_specifier             go to state 38


State 35

   30 declaration_specifiers: function_specifier • declaration_specifiers
   31                       | function_specifier •

    TYPEDEF_NAME  shift, and go to state 2
    TYPEDEF       shift, and go to state 3
    EXTERN        shift, and go to state 4
    STATIC        shift, and go to state 5
    AUTO          shift, and go to state 6
    REGISTER      shift, and go to state 7
    VOID          shift, and go to state 8
    CHAR          shift, and go to state 9
    SHORT         shift, and go to state 10
    INT           shift, and go to state 11
    LONG          shift, and go to state 12
    FLOAT         shift, and go to state 13
    DOUBLE        shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    BOOL          shift, and go to state 17
    STRUCT        shift, and go to state 18
    UNION         shift, and go to state 19
    ENUM          shift, and go to state 20
    CONST         shift, and go to state 21
    RESTRICT      shift, and go to state 22
    VOLATILE      shift, and go to state 23
    INLINE        shift, and go to state 24
    NORETURN      shift, and go to state 25
    ALIGNAS       shift, and go to state 26

    $default  reduce using rule 31 (declaration_specifiers)

    declaration_specifiers     go to state 60
    storage_class_specifier    go to state 32
    type_specifier             go to state 33
    type_qualifier             go to state 34
    function_specifier         go to state 35
    alignment_specifier        go to state 36
    struct_or_union_specifier  go to state 37
    enum_specifier             go to state 38


State 36

   32 declaration_specifiers: alignment_specifier • declaration_specifiers
   33                       | alignment_specifier •

    TYPEDEF_NAME  shift, and go to state 2
    TYPEDEF       shift, and go to state 3
    EXTERN        shift, and go to state 4
    STATIC        shift, and go to state 5
    AUTO          shift, and go to state 6
    REGISTER      shift, and go to state 7
    VOID          shift, and go to state 8
    CHAR          shift, and go to state 9
    SHORT         shift, and go to state 10
    INT           shift, and go to state 11
    LONG          shift, and go to state 12
    FLOAT         shift, and go to state 13
    DOUBLE        shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    BOOL          shift, and go to state 17
    STRUCT        shift, and go to state 18
    UNION         shift, and go to state 19
    ENUM          shift, and go to state 20
    CONST         shift, and go to state 21
    RESTRICT      shift, and go to state 22
    VOLATILE      shift, and go to state 23
    INLINE        shift, and go to state 24
    NORETURN      shift, and go to state 25
    ALIGNAS       shift, and go to state 26

    $default  reduce using rule 33 (declaration_specifiers)

    declaration_specifiers     go to state 61
    storage_class_specifier    go to state 32
    type_specifier             go to state 33
    type_qualifier             go to state 34
    function_specifier         go to state 35
    alignment_specifier        go to state 36
    struct_or_union_specifier  go to state 37
    enum_specifier             go to state 38


State 37

   49 type_specifier: struct_or_union_specifier •

    $default  reduce using rule 49 (type_specifier)


State 38

   50 type_specifier: enum_specifier •

    $default  reduce using rule 50 (type_specifier)


State 39

   71 struct_or_union_specifier: STRUCT IDENTIFIER • LBRACE struct_declaration_list RBRACE
   72                          | STRUCT IDENTIFIER •

    LBRACE  shift, and go to state 62

    $default  reduce using rule 72 (struct_or_union_specifier)


State 40

   70 struct_or_union_specifier: STRUCT LBRACE • struct_declaration_list RBRACE

    TYPEDEF_NAME  shift, and go to state 2
    VOID          shift, and go to state 8
    CHAR          shift, and go to state 9
    SHORT         shift, and go to state 10
    INT           shift, and go to state 11
    LONG          shift, and go to state 12
    FLOAT         shift, and go to state 13
    DOUBLE        shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    BOOL          shift, and go to state 17
    STRUCT        shift, and go to state 18
    UNION         shift, and go to state 19
    ENUM          shift, and go to state 20
    CONST         shift, and go to state 21
    RESTRICT      shift, and go to state 22
    VOLATILE      shift, and go to state 23

    type_specifier             go to state 63
    type_qualifier             go to state 64
    struct_or_union_specifier  go to state 37
    struct_declaration_list    go to state 65
    struct_declaration         go to state 66
    specifier_qualifier_list   go to state 67
    enum_specifier             go to state 38


State 41

   74 struct_or_union_specifier: UNION IDENTIFIER • LBRACE struct_declaration_list RBRACE
   75                          | UNION IDENTIFIER •

    LBRACE  shift, and go to state 68

    $default  reduce using rule 75 (struct_or_union_specifier)


State 42

   73 struct_or_union_specifier: UNION LBRACE • struct_declaration_list RBRACE
